Fixed misalignment of the desktop timetable

--- a/2016/css/authors.css
+++ b/2016/css/authors.css
@@ -1,7 +1,7 @@
 .version.authors /* version checker */
 {
-	color: #0000F8;
-	background-color: #4E50C0;
+	color: #0000F4;
+	background-color: #396C02;
 }
 
 .html
@@ -576,7 +576,7 @@
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 1770px;
+	margin-top: 1784px;
 	left: 19px;
 }
 
@@ -654,7 +654,7 @@
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 1480px;
+	margin-top: 1498px;
 	left: 125px;
 }
 
